--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<html><head>Hello friends updated after merge test in my local box agin</head></html>
+<html><head>Hello friends updated testing git diff agin</head></html>
